# awsomefs

./: .gitattributes  ARCHITECTURE.md  Makefile  README.md
cmd/csi-awsomefs/: Dockerfile  go.mod  go.sum  main.go
cmd/csi-awsomefs/driver/: controller.go  driver.go  identity.go  node.go
cmd/csi-driver/: Dockerfile  go.mod  main.go
cmd/fs-core/: Cargo.toml  Dockerfile
cmd/fs-core/src/: block.rs  cli.rs  core.rs  device.rs  fs.rs  layout.rs  lib.rs  main.rs  metadata.rs  superblock.rs  volume.rs
cmd/fs-core/src/fuse/: filesystem.rs
cmd/fs-core/src/metadata/: local.rs  mod.rs  remote.rs
cmd/internal/proto/: Cargo.toml  build.rs
cmd/internal/proto/proto/: metadata.proto
cmd/internal/proto/src/: lib.rs
cmd/metadata-service/: Cargo.toml  Dockerfile
cmd/metadata-service/src/: main.rs  server.rs
dev-env/: kind-config.yaml
docs/: distributed_fs_k8s.md
examples/: pod.yaml  pvc.yaml  storageclass.yaml
k8s/csi-driver/: controller-deployment.yaml  csidriver.yaml  daemonset.yaml  deployment.yaml  serviceaccount.yaml
k8s/fs-core/: daemonset.yaml
k8s/metadata-service/: deployment.yaml
kernel/fs_driver/: Makefile  fs_driver.c
