[package]
name = "fs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tempfile = "3"
fuser = "0.13"
libc = "0.2"

